# mos6502

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dicc.c  dicc.h  direccionamiento.c  direccionamiento.h  main.c  makefile  mos6502.c  mos6502.h  operaciones.c  operaciones.h  status.h
examples/: hello.rom
src/: main.c
src/core/: addressing.c  addressing.h  cpu.c  cpu.h  instructions.c  instructions.h  opcodes.c  opcodes.h  status.c  status.h
tests/: test_addressing.c  test_cpu.c  test_framework.h  test_instructions.c  test_io.c  test_runner.c  test_status.c
